feat: Integrated Master Guide & Commercial Update (v1.0.0)

--- a/marketplace_sales_page.html
+++ b/marketplace_sales_page.html
@@ -311,8 +311,9 @@
 
         <div class="stats">
             <div class="stat-item"><span class="stat-val">0.2s</span><span class="stat-label">평균 매칭 속도</span></div>
-            <div class="stat-item"><span class="stat-val">100%</span><span class="stat-label">매칭 정합성</span></div>
-            <div class="stat-item"><span class="stat-val">ZERO</span><span class="stat-label">필요한 수식 지식</span></div>
+            <div class="stat-item"><span class="stat-val">5 Filters</span><span class="stat-label">다중 필터링 지원</span>
+            </div>
+            <div class="stat-item"><span class="stat-val">INSTANT</span><span class="stat-label">중단/취소 기능</span></div>
         </div>
     </div>
 
@@ -332,7 +333,7 @@
                 <h3>✅ 이지 매치 혁신</h3>
                 <ul>
                     <li>🚀 슥- 던지면 착- 붙는 드래그 앤 드롭</li>
-                    <li>🚀 50만 행도 멈춤 없이 쾌속 처리</li>
+                    <li>🚀 100만 행도 멈춤 없이 쾌속 처리</li>
                     <li>🚀 형태가 다른 데이터도 감쪽같이 찾아내는 보정</li>
                     <li>🚀 직관적인 UI로 작업의 품격까지 상승</li>
                 </ul>
@@ -346,17 +347,17 @@
             <div class="feature-item">
                 <span class="feature-icon">⚡</span>
                 <h3>C-Optimized 엔진</h3>
-                <p>단순 매크로가 아닙니다. 고성능 데이터 과학 라이브러리로 무장한 전문 소프트웨어입니다.</p>
+                <p>단순 매크로가 아닙니다. 고성능 데이터 과학 라이브러리로 무장하여 수만 행의 데이터도 단 몇 초 만에 처리하는 전문 소프트웨어입니다.</p>
             </div>
             <div class="feature-item">
-                <span class="feature-icon">🛡️</span>
-                <h3>철저한 보안 배포</h3>
-                <p>무단 복제 방지 시스템으로 판매자의 수익을 보호하고, 사용자 기기를 안전하게 인증합니다.</p>
+                <span class="feature-icon">🔍</span>
+                <h3>5중 복합 필터링</h3>
+                <p>단순 포함/제외를 넘어 숫자 크기 비교(>=, <=) 연산까지 지원합니다. 원하는 데이터만 정밀하게 타격하여 골라내는 전문가용 기능을 경험하세요.</p>
             </div>
             <div class="feature-item">
-                <span class="feature-icon">🎨</span>
-                <h3>메이저급 UX 디자인</h3>
-                <p>모든 프로세스에 테마 애니메이션을 적용하여 전문가용 툴다운 만족감을 선사합니다.</p>
+                <span class="feature-icon">💾</span>
+                <h3>지능형 포맷 전환</h3>
+                <p>데이터 규모에 따라 Excel과 CSV를 자동으로 선택합니다. 100만 행이 넘어도 멈춤이나 응답 없음 걱정 없이 가장 안전한 포맷으로 자동 저장해 드립니다.</p>
             </div>
         </div>
     </div>
@@ -374,7 +375,7 @@
             <div class="tag-best">런칭 기념 파격 특가</div>
             <p class="p-title">Easy Match v1.0.0 (Pro)</p>
             <p class="p-desc">개인용/기업용 통합 솔루션 l 영구 소장 l 실시간 업데이트</p>
-            <div class="p-val"><span>₩99,000</span> ₩29,000</div>
+            <div class="p-val"><span>₩132,000</span> ₩49,000</div>
             <p style="color:#ef4444; font-weight:800; margin-bottom:40px;">* 선착순 30명 마감 시 정상가 환원</p>
             <a href="#" class="cta-btn">지금 바로 라이선스 구매하기</a>
         </div>
@@ -383,6 +384,29 @@
             <span>✓ 100% 무인 전산 처리</span>
             <span>✓ 평생 무료 업데이트</span>
             <span>✓ 윈도우/맥 동시 지원</span>
+        </div>
+
+        <!-- Legal / Notice Section -->
+        <div
+            style="max-width: 800px; margin: 80px auto 0; text-align: left; background: #fff; padding: 40px; border-radius: 20px; border: 1px solid #e2e8f0;">
+            <h3 style="margin-top: 0; color: #1e293b; border-bottom: 2px solid #e2e8f0; padding-bottom: 15px;">⚠️ 구매 전
+                필수 확인 사항</h3>
+            <ul style="padding-left: 20px; color: #64748b; line-height: 1.8;">
+                <li style="margin-bottom: 15px;">
+                    <strong>1 PC 1 라이선스 원칙</strong><br>
+                    본 상품의 가격은 1 PC 설치 기준입니다. 여러 대의 PC에서 사용하시려면 수량에 맞춰 추가 구매하셔야 합니다.
+                </li>
+                <li style="margin-bottom: 15px;">
+                    <strong>불법 복제 강력 대응</strong><br>
+                    프로그램의 무단 복제, 공유, 배포 또는 리버스 엔지니어링 시도가 감지될 경우 서버에서 즉시 영구 차단 조치되며, 저작권법에 의거하여 민·형사상 법적 책임을 물을 수 있습니다.
+                </li>
+                <li>
+                    <strong>디지털 콘텐츠 환불 규정</strong><br>
+                    본 제품은 구매 즉시 라이선스 키가 발송되는 디지털 콘텐츠 특성상, <strong>발송 이후에는 환불이 절대 불가능</strong>합니다. 구매 전 상세 설명과 기능을 충분히
+                    확인해 주시기 바랍니다.<br>
+                    (단, 프로그램 자체의 치명적인 결함으로 구동이 불가능한 경우 전문가 확인 후 조치해 드립니다.)
+                </li>
+            </ul>
         </div>
     </div>
 
