--- a/user_manual_v1.0.html
+++ b/user_manual_v1.0.html
@@ -263,9 +263,23 @@
             <!-- Step 3 -->
             <div class="step-item">
                 <div class="step-text">
-                    <h3>3. 자동 매칭 및 저장</h3>
-                    <p>'매칭 시작' 버튼을 누르면 정밀 엔진이 데이터를 대조합니다. 완료 후 나타나는 미리보기 화면에서 데이터를 확인하세요.</p>
-                    <p>마지막으로 '결과 저장' 버튼을 누르면 합쳐진 파일이 내 컴퓨터에 안전하게 저장됩니다.</p>
+                    <h3>3. 필터 및 전문가 설정 (선택)</h3>
+                    <p>특정 조건의 데이터만 뽑고 싶다면 '필터 조건 설정'을 누르세요. <strong>최대 5개</strong>의 복합 조건을 설정할 수 있으며, 금액 데이터의 경우 '이상/이하'
+                        연산도 가능합니다.</p>
+                    <p>또한 '전문가용: 상위 10개 추출' 옵션을 통해 대량 데이터의 일부만 빠르게 샘플링해볼 수 있습니다.</p>
+                </div>
+                <div class="step-visual">
+                    <img src="user_manual_step2_match.png" alt="Filter Configuration">
+                </div>
+            </div>
+
+            <!-- Step 4 -->
+            <div class="step-item" style="direction: rtl;">
+                <div class="step-text" style="direction: ltr;">
+                    <h3>4. 자동 매칭 및 즉시 취소</h3>
+                    <p>'매칭 시작' 버튼을 누르면 정밀 엔진이 데이터를 대조합니다. 진행 중 마음이 바뀌었다면 '종료 및 취소' 버튼을 눌러 <strong>즉시 중단</strong>할 수
+                        있습니다.</p>
+                    <p>마지막으로 결과 미리보기 후 '결과 저장' 버튼을 누르면 합쳐진 파일이 안전하게 저장됩니다.</p>
                 </div>
                 <div class="step-visual">
                     <img src="user_manual_step3_result.png" alt="Result Saving">
@@ -281,8 +295,12 @@
                     <p style="color:#d1d5db;">데이터 사이에 숨어있는 공백, 문자/숫자 형식 차이를 엔진이 스스로 판단하여 정확히 맞춰줍니다.</p>
                 </div>
                 <div class="faq-item" style="background: #1f2937;">
-                    <strong>둘, 압도적인 처리 속도</strong>
-                    <p style="color:#d1d5db;">수십만 줄의 데이터도 엑셀이 멈추지 않고 단 몇 초 만에 처리되어 스트레스 없는 작업이 가능합니다.</p>
+                    <strong>둘, 다중 조건 & 숫자 필터</strong>
+                    <p style="color:#d1d5db;">한 번에 5개까지의 복합 필터를 적용하고, '10만원 이상' 같은 숫자 연산도 한 번에 해결하세요.</p>
+                </div>
+                <div class="faq-item" style="background: #1f2937;">
+                    <strong>셋, 압도적인 처리 속도 및 즉시 반응</strong>
+                    <p style="color:#d1d5db;">백만 줄 이상의 데이터도 단 몇 초 만에 처리하며, 작업 중 언제든 즉시 취소할 수 있는 쾌적함을 선사합니다.</p>
                 </div>
             </div>
         </div>
