--- a/official_proposal_v1.0.html
+++ b/official_proposal_v1.0.html
@@ -222,17 +222,18 @@
 
         <h2 class="section-title"><span>02</span> 솔루션 핵심 내용</h2>
         <h3>인간 중심 인터페이스 (Human-Centered UI)</h3>
-        <p>Easy Match는 '가장 쉬운 것이 가장 혁신적인 것'이라는 철학으로 개발되었습니다. 사용자는 수식을 한 줄도 적지 않고, 두 파일의 공통된 항목을 마우스로 잇는 것만으로 수만 줄의 데이터를
+        <p>Easy Match는 '가장 쉬운 것이 가장 혁신적인 것'이라는 철학으로 개발되었습니다. 사용자는 수식을 한 줄도 적지 않고, 두 파일의 공통된 항목을 마우스로 잇는 것만으로 백만 줄 이상의
+            데이터를
             완벽하게 동기화할 수 있습니다.</p>
 
         <div class="impact-grid">
             <div class="impact-card">
-                <strong>정밀 매칭 엔진</strong>
-                <p>데이터의 공백, 형식(문자/숫자) 차이를 스스로 극복하는 지능형 매칭 알고리즘 탑재.</p>
+                <strong>고급 복합 필터링</strong>
+                <p>최대 5개의 다중 조건과 수치 연산자를 결합하여, 방대한 데이터 중 필요한 정보만 선별해내는 전문가급 기능 탑재.</p>
             </div>
             <div class="impact-card">
-                <strong>시각적 프로세스</strong>
-                <p>데이터가 조립되는 과정을 애니메이션으로 노출하여 사용자의 작업 몰입도와 신뢰도 향상.</p>
+                <strong>고속 엔진 및 즉각 제어</strong>
+                <p>벡터 연산을 통한 초고속 매칭과 더불어, 작업 중 언제든 즉시 중단이 가능한 'Instant-Cancel' 기능으로 작업 효율 극대화.</p>
             </div>
         </div>
 
