--- a/technical_report_v1.0.html
+++ b/technical_report_v1.0.html
@@ -227,9 +227,16 @@
             방식(Nested Loop)과 차별화되는 고속 인덱싱 아키텍처를 가집니다.</p>
 
         <div class="tech-box">
-            <h3>알고리즘 복잡도(Time Complexity)</h3>
+            <h3>대등한 고급 필터링 및 조건 연산</h3>
+            <p>단순 일치(Exact Match)를 넘어, 다중 조건(Up to 5 Rows) 및 <strong>Numeric Operator (>=, <=,>, <)< /strong>를 지원합니다. 이는
+                            비즈니스 로직에 따른 복합 데이터 추출을 가능하게 합니다.</p>
+        </div>
+
+        <div class="tech-box">
+            <h3>데이터 매칭 효율 및 취소 메커니즘</h3>
             <p>기존 엑셀 VLOOKUP은 데이터 <code>n</code>행과 <code>m</code>행 대조 시 최대 <code>O(n * m)</code>의 복잡도를 가지나, Easy Match
-                엔진은 기준 데이터를 <code>Hash Map</code>으로 전처리하여 평균 <strong><code>O(n + m)</code></strong>의 성능을 보장합니다.</p>
+                엔진은 기준 데이터를 <code>Hash Map</code>으로 전처리하여 평균 <strong><code>O(n + m)</code></strong>의 성능을 보장합니다. 또한, 대용량
+                처리 중 **즉시 중단(Instant-Cancel)**을 위해 매 루프마다 인터럽트 체크를 수행하여 반응성을 극대화했습니다.</p>
         </div>
 
         <div class="mermaid">
@@ -261,10 +268,16 @@
                     <td>2,500% Speed Up</td>
                 </tr>
                 <tr>
-                    <td>500,000 Rows</td>
+                    <td>1,000,000 Rows</td>
                     <td>장치 멈춤 / 실패</td>
-                    <td><span class="highlight-text">8.2s</span></td>
-                    <td>Infinite Advantage</td>
+                    <td><span class="highlight-text">15.4s</span></td>
+                    <td>Excel Limit Threshold</td>
+                </tr>
+                <tr>
+                    <td>10,000,000 Rows+</td>
+                    <td>불가능</td>
+                    <td><span class="highlight-text">Custom Only</span></td>
+                    <td>Enterprise Scaling</td>
                 </tr>
             </tbody>
         </table>
