docs: Update manuals and HTML assets (v1.0.18)

--- a/usage_guide.html
+++ b/usage_guide.html
@@ -133,7 +133,7 @@
 
 <body>
 
-    <h1>🚀 ExcelMatcher 가이드</h1>
+    <h1>🚀 ExcelMatcher v1.0.18</h1>
     <p class="subtitle">복잡한 엑셀 매칭 작업을 단 몇 번의 클릭으로 해결하세요.</p>
 
     <div class="step-container">
@@ -174,8 +174,10 @@
         <h2>💡 전문가 팁 (Pro Tips)</h2>
         <ul>
             <li><strong>오타 보정 (Fuzzy Match)</strong>: 'Apple'과 'Appel' 처럼 미세하게 다른 텍스트도 자동으로 찾아냅니다.</li>
+            <li><strong>전문가 필터</strong>: 데이터 존재 여부(Exists/Not Empty) 체크 기능을 통해 정밀한 데이터 정제가 가능합니다.</li>
             <li><strong>색상 강조</strong>: 매칭된 데이터가 있는 행에 배경색을 칠해 시각적으로 구분해줍니다.</li>
             <li><strong>치환 설정</strong>: '(주)', '공백' 등 불필요한 문자를 자동으로 제거하고 매칭할 수 있습니다.</li>
+            <li><strong>초고속 실행</strong>: 최적화된 엔진으로 대용량 파일도 즉각적으로 로딩하고 처리합니다.</li>
         </ul>
     </div>
 
