docs: Add UI screenshots to seller assets

--- a/seller_assets/delivery_template.html
+++ b/seller_assets/delivery_template.html
@@ -51,6 +51,13 @@
 <body>
     <h1>📋 크몽 발송용 템플릿</h1>
     <p>아래 내용을 복사하여 고객에게 전달하세요.</p>
+
+    <div style="margin-bottom: 20px; text-align: center;">
+        <img src="main_ui.png" alt="Main UI"
+            style="width: 100%; max-width: 500px; border-radius: 8px; border: 1px solid #ddd;">
+        <p style="font-size: 0.8rem; color: #666;">[참고 이미지: 프로그램 메인 화면]</p>
+    </div>
+
     <div class="copy-box">
         <button class="btn-copy" onclick="copyText()">복사하기</button>
         <pre id="template-text">
