fix: Use absolute raw GitHub URLs for images to fix online preview

--- a/seller_assets/blog_draft.html
+++ b/seller_assets/blog_draft.html
@@ -68,10 +68,11 @@
     <div class="section">
         <h2>3. 사용 방법</h2>
         <div style="text-align: center; margin: 20px 0;">
-            <img src="main_ui.png" alt="Setup" style="width: 100%; max-width: 600px; border-radius: 8px;">
+            <img src="https://raw.githubusercontent.com/bough38-web/easy-match/main/seller_assets/main_ui.png"
+                alt="Setup" style="width: 100%; max-width: 600px; border-radius: 8px;">
             <p style="font-size: 0.9rem; color: #888;">Step 1. 파일 및 항목 설정</p>
-            <img src="processing_dialog.png" alt="Processing"
-                style="width: 100%; max-width: 400px; border-radius: 8px; margin-top: 20px;">
+            <img src="https://raw.githubusercontent.com/bough38-web/easy-match/main/seller_assets/processing_dialog.png"
+                alt="Processing" style="width: 100%; max-width: 400px; border-radius: 8px; margin-top: 20px;">
             <p style="font-size: 0.9rem; color: #888;">Step 2. 초고속 매칭 프로세스</p>
         </div>
         <p>1. 파일 넣기 -> 2. 매칭 항목 선택 -> 3. 매칭 시작! <br> 정말 간단하죠?</p>
