--- a/seller_assets/delivery_template.html
+++ b/seller_assets/delivery_template.html
@@ -53,7 +53,7 @@
     <p>아래 내용을 복사하여 고객에게 전달하세요.</p>
 
     <div style="margin-bottom: 20px; text-align: center;">
-        <img src="main_ui.png" alt="Main UI"
+        <img src="https://raw.githubusercontent.com/bough38-web/easy-match/main/seller_assets/main_ui.png" alt="Main UI"
             style="width: 100%; max-width: 500px; border-radius: 8px; border: 1px solid #ddd;">
         <p style="font-size: 0.8rem; color: #666;">[참고 이미지: 프로그램 메인 화면]</p>
     </div>
