fix: Final check on absolute image URLs in all HTML assets

--- a/seller_assets/user_manual_v2.0.html
+++ b/seller_assets/user_manual_v2.0.html
@@ -153,6 +153,11 @@
 
         <div class="card">
             <h2>01. 기본 사용법</h2>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/bough38-web/easy-match/main/seller_assets/main_ui.png"
+                    alt="Main UI">
+                <p style="font-size: 0.8rem; color: #94a3b8; margin-top: 8px;">[프로그램 메인 인터페이스]</p>
+            </div>
             <ol class="steps">
                 <li><strong>파일 로드</strong>: 기준 파일(Source)과 대상 파일(Target)을 드래그하여 넣습니다.</li>
                 <li><strong>항목 선택</strong>: 두 파일이 공통으로 가진 항목(사번, 이름, ID 등)을 매칭 키로 지정합니다.</li>
